Fix the tests for LDA and TextClassifier.